--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,7 +1,9 @@
 on:
   push:
+    branches:
+      - main
   schedule:
-    - cron: "15 4,5 * * *"
+    - cron: "15 11,23 * * *"
 
 jobs:
   sync:
@@ -10,3 +12,4 @@ jobs:
       - uses: hashicorp/setup-terraform@v3
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      - run: terraform apply -auto-approve
