--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,3 +15,8 @@ jobs:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
       - run: terraform init
       - run: terraform apply -auto-approve
+        env:
+          TF_VAR_RCLONE_CONFIG_PASS: ${{ secrets.TF_VAR_RCLONE_CONFIG_PASS }}
+          TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.TF_VAR_AWS_ACCESS_KEY_ID }}
+          TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.TF_VAR_AWS_SECRET_ACCESS_KEY }}
+
